--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ script:
   - set -o pipefail && xcodebuild test -enableCodeCoverage YES -project SwiftyLib.xcodeproj -scheme SwiftyLib -sdk $TEST_SDK -destination "platform=iOS Simulator,OS=$OS,name=$NAME" ONLY_ACTIVE_ARCH=YES
 
 after_success:
-  - slathe
-  - bash <(curl -s https://codecov.io/bash) -t 8289490f-dd83-46d8-ac57-d8bf018ce790
- # - bash <(curl -s https://codecov.io/bash) -f reports/cobertura.xml -X coveragepy -X gcov -X xcode
+  - slather
+  #- bash <(curl -s https://codecov.io/bash) -t 8289490f-dd83-46d8-ac57-d8bf018ce790
+  - bash <(curl -s https://codecov.io/bash) -f reports/cobertura.xml -X coveragepy -X gcov -X xcode
